# substrate-runtime-contract-sample

./: Cargo.toml  README.md
contracts/custom_type/: Cargo.toml  lib.rs
contracts/custom_type/.ink/abi_gen/: Cargo.toml  main.rs
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  template.rs
src/: chain_spec.rs  main.rs  service.rs
