[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[[bin]]
name = 'substrate-runtime-contract-sample'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[workspace]
members = ['runtime']

[dependencies]
derive_more = '0.15.0'
futures = '0.3.1'
jsonrpc-core = "14.0.5"
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.consensus-common]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-common'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.contracts]
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.pallet-contracts-rpc]
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.runtime]
package = 'substrate-runtime-contract-sample-runtime'
path = 'runtime'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.substrate-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.txpool]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-transaction-pool'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.txpool-api]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-api'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'substrate-runtime-contract-sample'
version = '2.0.0'
