[[bin]]
name = 'substrate-runtime-contract-sample'
path = 'src/main.rs'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-consensus-aura'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus-aura'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-basic-authority'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.consensus-common]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.contracts]
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-granpda'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-inherents'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-network'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.runtime]
package = 'substrate-runtime-contract-sample-runtime'
path = 'runtime'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.txpool]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-transaction-pool'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.txpool-api]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-api'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'
[profile.release]
panic = 'unwind'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'substrate-runtime-contract-sample'
version = '2.0.0'

[workspace]
members = ['runtime']
