[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'
version = '1.0.4'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'substrate-runtime-contract-sample-runtime'
version = '2.0.0'

[features]
default = ['std']
std = [
    'aura-primitives/std',
    'aura/std',
    'balances/std',
    'block-builder-api/std',
    'codec/std',
    'executive/std',
    'grandpa/std',
    'indices/std',
    'inherents/std',
    'offchain-primitives/std',
    'primitives/std',
    'randomness-collective-flip/std',
    'rstd/std',
    'runtime-io/std',
    'safe-mix/std',
    'serde',
    'sr-api/std',
    'sr-primitives/std',
    'substrate-session/std',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'tx-pool-api/std',
    'version/std',
    'contracts/std',
    'contracts-rpc-runtime-api/std'
]
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.block-builder-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-block-builder-runtime-api'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc-runtime-api'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.sr-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.tx-pool-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-runtime-api'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'e3245d49dc55c9e3a88ab3e45ff4a0c4d37750c4'
