[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'
version = '1.0.4'

[features]
default = ['std']
std = [
    'aura-primitives/std',
    'aura/std',
    'balances/std',
    'block-builder-api/std',
    'codec/std',
    'executive/std',
    'grandpa/std',
    'indices/std',
    'inherents/std',
    'offchain-primitives/std',
    'primitives/std',
    'randomness-collective-flip/std',
    'rstd/std',
    'runtime-io/std',
    'safe-mix/std',
    'serde',
    'sp-api/std',
    'sp-runtime/std',
    'sp-sesssion/std',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'txpool-runtime-api/std',
    'version/std',
]
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus-aura'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.block-builder-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-block-builder'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc-runtime-api'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-inherents'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-offchain'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-std'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-io'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sp-sesssion]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.txpool-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-runtime-api'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-version'
rev = 'd8d5da2c6b7c8bf0fda7b406c27ef659dba47cd6'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'substrate-runtime-contract-sample-runtime'
version = '2.0.0'
