[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'
version = '1.0.4'

[features]
default = ['std']
std = [
    'aura-primitives/std',
    'aura/std',
    'balances/std',
    'block-builder-api/std',
    'codec/std',
    'contracts-rpc-runtime-api/std',
    'executive/std',
    'grandpa/std',
    'indices/std',
    'inherents/std',
    'offchain-primitives/std',
    'primitives/std',
    'randomness-collective-flip/std',
    'rstd/std',
    'runtime-io/std',
    'safe-mix/std',
    'serde',
    'sp-api/std',
    'sp-runtime/std',
    'sp-session/std',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'txpool-runtime-api/std',
    'version/std',
]
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus-aura'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.block-builder-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-block-builder'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc-runtime-api'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-inherents'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-offchain'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-std'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-io'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.hex-literal]
version = '0.2.1'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-session'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.txpool-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-runtime-api'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-version'
rev = 'c837c8d9216d310a0e6938496c33161680ed2355'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'substrate-runtime-contract-sample-runtime'
version = '2.0.0'
